--- a/plugin.xml
+++ b/plugin.xml
@@ -25,7 +25,7 @@
                 </param>
             </feature>
         </config-file>
-        <config-file parent="/manifest" target="AndroidManifest.xml">
+        <config-file parent="/manifest" target="app/src/main/AndroidManifest.xml">
             <!-- 这个权限用于进行网络定位-->
             <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
             <!-- 这个权限用于访问GPS定位-->
@@ -51,7 +51,7 @@
             <uses-permission android:name="android.permission.CALL_PHONE"/>
         </config-file>
 
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+        <config-file target="app/src/main/AndroidManifest.xml" parent="/manifest/application">
             <!--您申请的高德地图android key-->
             <meta-data android:name="com.amap.api.v2.apikey" android:value="$KEY"/>
             <!-- 定位需要的服务 -->
