--- a/plugin.xml
+++ b/plugin.xml
@@ -51,11 +51,11 @@
             <uses-permission android:name="android.permission.CALL_PHONE"/>
         </config-file>
 
-        <config-file target="app/src/main/AndroidManifest.xml" parent="/manifest/application">
+        <config-file target="app/src/main/AndroidManifest.xml" parent="/manifest/application" mode="merge">
             <!--您申请的高德地图android key-->
             <meta-data android:name="com.amap.api.v2.apikey" android:value="$KEY"/>
             <!-- 定位需要的服务 -->
-            <service android:name="com.amap.api.location.APSService"></service>
+            <service android:name="com.amap.api.location.APSService"/>
         </config-file>
 
         <source-file src="libs/android/AMap_Location_V4.5.0_20190121.jar" target-dir="libs"/>
