--- a/plugin.xml
+++ b/plugin.xml
@@ -26,40 +26,56 @@
             </feature>
         </config-file>
         <config-file parent="/manifest" target="app/src/main/AndroidManifest.xml">
-            <!-- 这个权限用于进行网络定位-->
-            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-            <!-- 这个权限用于访问GPS定位-->
-            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-            <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
-            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-            <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+            <!-- Normal Permissions 不需要运行时注册 -->
+            <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-            <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+            <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+            <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
             <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-            <!-- 用于读取手机当前的状态-->
-            <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-            <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
-            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-            <!-- 访问网络，网络定位需要上网-->
-            <uses-permission android:name="android.permission.INTERNET"/>
-            <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-            <!-- 允许应用读取低级别的系统日志文件 -->
-            <uses-permission android:name="android.permission.READ_LOGS"/>
-            <!--修改当前配置-->
             <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
-            <!--拨打电话的权限，该权限并非该插件所需，只是为了方便App调用电话-->
-            <uses-permission android:name="android.permission.CALL_PHONE"/>
+            
+            <!-- 请求网络 -->
+            <uses-permission android:name="android.permission.INTERNET"/>
+
+            <!-- 不是SDK需要的权限，是后台唤醒定位需要的权限 -->
+            <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+            <!-- 需要运行时注册的权限 -->
+            <!-- 用于进行网络定位 -->
+            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+            <!-- 用于访问GPS定位 -->
+            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+            <!-- 用于提高GPS定位速度 -->
+            <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
+            <!-- 写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据 -->
+            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+            <!-- 读取缓存数据 -->
+            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+            <!-- 用于读取手机当前的状态 -->
+            <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+            <!-- 更改设置 -->
+            <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+
+            <!--如果设置了target >= 28 如果需要启动后台定位则必须声明这个权限-->
+            <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+            <!--如果您的应用需要后台定位权限，且有可能运行在Android Q设备上,并且设置了target>28，必须增加这个权限声明-->
+            <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
         </config-file>
 
         <config-file target="app/src/main/AndroidManifest.xml" parent="/manifest/application" mode="merge">
             <!--您申请的高德地图android key-->
             <meta-data android:name="com.amap.api.v2.apikey" android:value="$KEY"/>
-            <!-- 定位需要的服务 -->
-            <service android:name="com.amap.api.location.APSService"/>
+            <!-- 定位需要的服务 适配Android Q需要加上android:foregroundServiceType="location"-->
+            <service
+                android:name="com.amap.api.location.APSService"
+                android:foregroundServiceType="location" />
         </config-file>
 
         <!-- <source-file src="libs/android/AMap_Location_V4.5.0_20190121.jar" target-dir="libs"/> -->
-        <source-file src="libs/android/AMap_Location_V5.2.0_20200915.jar" target-dir="libs"/>
+        <source-file src="libs/android/AMap_Location_V5.3.1_20210331.jar" target-dir="libs"/>
 
         <source-file src="src/android/AMapLocationPlugin.java" target-dir="src/com/joyo/cordova/location">
         </source-file>
